fix: Make sure that the empty message is aligned in the center of the SP container
Jira Issue DD-1926

Sync to source repo @3bfcbf00f89798d2179308060ebc8afc66c522fe

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -183,6 +183,7 @@ div.dtsp-panesContainer {
   clear: both;
   padding-left: 0;
   padding-right: 0;
+  text-align: center;
 }
 div.dtsp-panesContainer div.dtsp-searchPanes {
   display: flex;
